Fixed scrolling issue and scrollbar styling on Annotation page

--- a/orgadmin/static/annotationStatic/css/app.css
+++ b/orgadmin/static/annotationStatic/css/app.css
@@ -1,3 +1,37 @@
+body{
+    padding: 1rem 0;
+    height: 100vh;
+    /* overflow: hidden; */
+}
+
+/* Custom scroillbar for webkit based browsers like Chrome, Safari and other Chromium based browsers */
+::-webkit-scrollbar {
+  width: 0.25rem;
+  height: 0.5rem;
+  
+}
+ 
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  background-color: transparent;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background-color: rgb(142, 142, 142);
+  outline: 1px solid slategrey;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+/* Custom scroillbar for webkit based browsers like Chrome, Safari and other Chromium based browsers */
+
+/* Custom scrollbar for Firefox */
+html{
+  scrollbar-color: rgb(108, 108, 108) transparent;
+  scrollbar-width: thin;
+}
+/* Custom scrollbar for Firefox */
+
 .wavesurfer-region {
     font-size: 0.85rem;
     font-weight: 600;
@@ -100,7 +134,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    height: 100vh;
+    height: 96vh;
 }
 
 .right-section > *{
@@ -117,7 +151,6 @@
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
-    height: ;
 }
 .result{
     display: flex;
@@ -154,6 +187,7 @@
     flex-direction: column;
     gap: 0.75rem;
     height: 50%;
+    padding-right: 0;
 }
 
 .region-list{
@@ -170,6 +204,7 @@
     align-items: center;
     gap: 0.5rem;
     cursor: pointer;
+    margin-right: 0.5rem;
 }
 
 .sort-button{
@@ -201,8 +236,14 @@
 .utility-buttons-group{
     display: flex;
     align-items: center;
+    /* justify-content: space-between; */
     margin: 1rem 0;
-    gap: 01rem;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+}
+
+input[type='range']{
+    width: 9rem;
 }
 
 .audio-data {
@@ -213,6 +254,7 @@ gap: 0.5rem;
 
 .annotation-text{
     width: 100%;
+    padding: 0.25rem 0.5rem;
 }
 
 .play-button{
@@ -245,6 +287,16 @@ input{
     overflow-y: scroll;
 }
 
+.exam-set-title{
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background-color: white;
+}
+.question-sets{
+    margin-left: -0.85rem;
+    margin-right: -0.85rem;
+}
 .merge-button{
     border: 1.5px solid dimgrey;
     padding: 0.1rem 0.5rem;
